(67-68) - Sort - RestApi - Filtro -Composição

--- a/filmes_series/src/main/resources/templates/filmes-form.html
+++ b/filmes_series/src/main/resources/templates/filmes-form.html
@@ -18,7 +18,7 @@
             </div>
             <div class="mb-3">
                 <label for="genero" class="form-label">genero:</label>                 
-                <input class="form-control" type="text" name="genero" id="genero" th:value="${filme.genero}">
+                <input class="form-control" type="text" name="genero_id" id="genero_id" th:value="${filme.genero_id}">
             </div>      
             <input class="btn  btn-primary" type="submit" value="Salvar">
         </form>
