--- a/filmes_series/src/main/resources/templates/filmes.html
+++ b/filmes_series/src/main/resources/templates/filmes.html
@@ -26,7 +26,7 @@
                     <td th:text="${f.id}"></td>
                     <td th:text="${f.nome}"></td>
                     <td th:text="${f.nome_diretor}"></td>
-                    <td th:text="${f.genero}"></td>
+                    <td th:text="${f.genero_id}"></td>
                     <td>
                         <a class="btn btn-warning" th:href="@{'/filme/editar/'+${f.id}}">Editar</a> |
                         <a class="btn btn-danger" th:href="@{'/filme/deletar/'+${f.id}}">Deletar</a>
